--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,9 @@ dependencies:
   shared_preferences: ^2.1.1
   google_sign_in: ^6.1.0
   http: ^1.1.0
-  # file_picker: ^6.1.1
-  syncfusion_flutter_pdfviewer: 32.1.19
-  flutter_local_notifications: 14.1.1
+  file_picker: ^10.3.8
+  syncfusion_flutter_pdfviewer: ^32.1.19
+  flutter_local_notifications: ^14.1.1
   timezone: 0.9.4
   
 
