--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,12 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^32.1.19
   flutter_local_notifications: ^14.1.1
   timezone: 0.9.4
+  firebase_app_check: 0.4.1+3
+  permission_handler: ^12.0.1
+  permission_handler_android: ^13.0.1
+  intl: ^0.20.2
+
+
   
 
 
